# bigquery-dd

./: .gitignore  .pre-commit-config.yaml  README.md  dataset.csv  install.sh  main.py  pyproject.toml  setup.sh  start_app.sh
.github/workflows/: ci.yml
data/raw/: dataset_example.csv  dataset_example_test.csv
evals/: evaluation_results.json  evaluation_results_bm25.json  evaluation_results_hybrid.json  evaluation_results_semantic.json
src/: evaluate.py  fastapi_app.py  generate_embedding.py  prepare_models.py  retrieve_data.py  retrieve_metadata.py  search.py  streamlit_app.py
src/bm25/: __init__.py  bm25_search.py
src/components/: __init__.py
src/hybrid/: __init__.py  hybrid_search.py
src/semantic/: __init__.py  embedding.py  semantic_search.py
tests/: __init__.py  test_embedding.py  test_search.py
