[project]
name = "bigquery-data-dictionary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-bigquery>=3.35.1",
    "pandas>=2.3.1",
    "pre-commit>=4.2.0",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.47.1",
]
