[project]
name = "bigquery-data-dictionary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "google-cloud-bigquery>=3.35.1",
    "pandas>=2.3.1",
    "pre-commit>=4.2.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.47.1",
    "uvicorn>=0.35.0",
]
